Got react router and react scroll to work simulatenously

--- a/package.json
+++ b/package.json
@@ -34,6 +34,9 @@
     "if-env": "^1.0.4",
     "mongoose": "^5.12.3",
     "passport": "^0.4.1",
-    "passport-local": "^1.0.0"
+    "passport-local": "^1.0.0",
+    "react-icons": "^4.2.0",
+    "react-scroll": "^1.8.2",
+    "styled-components": "^5.2.3"
   }
 }
