--- a/client/package.json
+++ b/client/package.json
@@ -6,9 +6,13 @@
     "@testing-library/jest-dom": "^5.11.10",
     "@testing-library/react": "^11.2.6",
     "@testing-library/user-event": "^12.8.3",
+    "apexcharts": "^3.26.0",
+    "axios": "^0.21.1",
+    "bootstrap": "^4.6.0",
     "emailjs": "^3.4.0",
     "emailjs-com": "^2.6.4",
     "react": "^17.0.2",
+    "react-apexcharts": "^1.3.9",
     "react-bootstrap": "^1.5.2",
     "react-dom": "^17.0.2",
     "react-router": "^5.2.0",
