--- a/package.json
+++ b/package.json
@@ -38,10 +38,12 @@
     "express-session": "^1.17.1",
     "if-env": "^1.0.4",
     "mongoose": "^5.12.3",
+    "multer": "^1.4.2",
     "nodemon": "^2.0.7",
     "passport": "^0.4.1",
     "passport-local": "^1.0.0",
     "react-icons": "^4.2.0",
-    "styled-components": "^5.2.3"
+    "styled-components": "^5.2.3",
+    "uuid": "^8.3.2"
   }
 }
