--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "express": "^4.17.1",
     "express-session": "^1.17.1",
     "if-env": "^1.0.4",
+    "jquery": "^3.6.0",
     "mongoose": "^5.12.3",
     "multer": "^1.4.2",
     "nodemon": "^2.0.7",
