--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "if-env": "^1.0.4",
     "jquery": "^3.6.0",
     "jsonwebtoken": "^8.5.1",
+    "moment": "^2.29.1",
     "mongoose": "^5.12.3",
     "multer": "^1.4.2",
     "nodemon": "^2.0.7",
