--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "nodemon": "^2.0.7",
     "passport": "^0.4.1",
     "passport-local": "^1.0.0",
+    "popper.js": "^1.16.1",
     "react-icons": "^4.2.0",
     "styled-components": "^5.2.3",
     "uuid": "^8.3.2"
