--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "passport-local": "^1.0.0",
     "popper.js": "^1.16.1",
     "react-icons": "^4.2.0",
+    "react-social-icons": "^5.1.1",
     "styled-components": "^5.2.3",
     "uuid": "^8.3.2"
   }
